Added x_user_request_id to schema
