# docs/openapi.json
@@ -628,6 +628,11 @@
             "type": "string",
             "example": "My name is Olivier and I"
           },
+          "x_user_request_id": {
+            "type": "string",
+            "example": "1234",
+            "nullable": true
+          },
           "parameters": {
             "$ref": "#/components/schemas/GenerateParameters"
           }
